--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -75,7 +75,7 @@
                         <MRow Class="pt-4 px-4" NoGutters Justify="JustifyTypes.SpaceBetween">
                             <STextField Style="width: 46.5%" Class="pr-6" TextColor="regular" Outlined @bind-Value="item.Name" Label="Name"></STextField>
                             <STextField Style="width: 46.5%;" TextColor="regular" Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
-                            <div class="d-flex justify-end align-start ml-6" style="width: 5%; margin-top: 14px;">
+                            <div class="d-flex justify-end align-start ml-6" style="width: 5%; margin: auto;">
                                 <MButton Icon Class="mr-3">
                                     <MIcon Disabled="@(_labelModal.Data.LabelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="remove-bg-after">mdi-close</MIcon>
                                 </MButton>
