--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -53,7 +53,7 @@
             </MButton>
         }
         
-        <MButton StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
+        <MButton Icon Class="mr-4" OnClick="UpdateConfig">
             @if (!ConfigObject.IsEditing)
             {
                 var relation = ConfigObject.RelationConfigObjectId != 0;
@@ -116,6 +116,5 @@
             </MList>
         </ChildContent>
     </MMenu>
-
     <span class="mr-6 regular3--text btn">|</span>
 </div>
