--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -58,10 +58,14 @@
         <div class="d-flex flex-column" style="width:100%; height:100%; padding:  48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
                 <p style="font-size:14px; font-weight:700; color:#1B2559">@T("Label")</p>
-		<MCard class="d-flex justify-start" Flat Tile>
-                    <STextField Outlined Tile @bind-Value="_labelModal.Data.TypeName" Label="TypeName" class="mr-6"></STextField>
-                    <STextField Disabled="_labelModal.HasValue" Outlined Tile @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></STextField>
-		</MCard>    
+                <MRow NoGutters>
+                    <MCol>
+                        <STextField Outlined @bind-Value="_labelModal.Data.TypeName" Label="TypeName" class="mr-6"></STextField>
+                    </MCol>
+                    <MCol>
+                        <STextField Disabled="_labelModal.HasValue" Outlined @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></STextField>
+                    </MCol>
+                </MRow>
                 <p class="mt-12" style="font-size:14px; font-weight:700; color:#1B2559">@T("Label values")</p>
                 <div style="border-radius: 8px; border: 1px solid #E2E7F4;" class="pt-3 pb-4">
                     <MRow Style="color: #A3AED0; font-size: 14px;" Class="px-6" NoGutters>
@@ -75,7 +79,7 @@
                         <MRow Class="pt-4 px-4" NoGutters Justify="JustifyTypes.SpaceBetween">
                             <STextField Style="width: 46.5%" Class="pr-6" TextColor="regular" Outlined @bind-Value="item.Name" Label="Name"></STextField>
                             <STextField Style="width: 46.5%;" TextColor="regular" Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
-                            <div class="d-flex justify-end align-start ml-6" style="width: 5%; margin-top: 14px;">
+                            <div class="d-flex justify-end align-start ml-6 pt-2" style="width: 5%;">
                                 <MButton Icon Class="mr-3">
                                     <MIcon Disabled="@(_labelModal.Data.LabelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="remove-bg-after">mdi-close</MIcon>
                                 </MButton>
@@ -95,7 +99,7 @@
                 }
                 <MSpacer />
                 <SButton Small OnClick="()=>SubmitLabelAsync(formContext)">@(_labelModal.HasValue ? T("Save") : T("Submit"))</SButton>
+                </div>
             </div>
-        </div>
-    </MForm>
-</SSheetDialog>
+        </MForm>
+    </SSheetDialog>
