feat: Add SEmptyPlaceholder Component And fix json serialize encoded problem

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -63,7 +63,7 @@
                     @if (_isEditBiz)
                     {
                         <MButton Class="mr-4" StopPropagation Icon OnClick="CancelEditBizName">
-                        <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
+                            <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
                         </MButton>
                     }
                     <MButton Icon OnClick="UpdateBizAsync" StopPropagation>
@@ -83,10 +83,10 @@
                         @foreach (var item in _projectEnvClusters)
                         {
                             <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(_bizDetail.Id, item.Id, ConfigObjectType.Biz, ProjectId))"
-                                        Style="margin:0 6px;"
-                                        EnvironmentName="@item.EnvironmentName"
-                                        EnvironmentColor="@item.EnvironmentColor"
-                                        ClusterName="@item.ClusterName" />
+                                            Style="margin:0 6px;"
+                                            EnvironmentName="@item.EnvironmentName"
+                                            EnvironmentColor="@item.EnvironmentColor"
+                                            ClusterName="@item.ClusterName" />
                         }
                     </MChipGroup>
                 </MCardActions>
@@ -103,28 +103,39 @@
                             <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                         </PrependInnerContent>
                     </MTextField>
-                    </MCol>
+                </MCol>
+            </MRow>
+            <div class="mt-6" style="width:100%; height: calc(100vh - 497px);overflow-y:auto; overflow-x:hidden; position:relative;">
+                @if (_apps.Any())
+                {
+                    <MRow>
+                        @foreach (var app in _apps)
+                        {
+                            <MCol Lg="4" Md="6" Sm="12">
+                                <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                    <MChipGroup @key="app.EnvironmentClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                        @foreach (var item in app.EnvironmentClusters)
+                                        {
+                                            <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, ProjectId))"
+                                                            Style="margin:0 12px 1px 0;"
+                                                            EnvironmentName="@item.EnvironmentName"
+                                                            EnvironmentColor="@item.EnvironmentColor"
+                                                            ClusterName="@item.ClusterName" />
+                                        }
+                                    </MChipGroup>
+                                </AppCard>
+                            </MCol>
+                        }
                     </MRow>
-            <div class="mt-6" style="width:100%; height: calc(100vh - 497px);overflow-y:auto; overflow-x:hidden;">
-                <MRow>
-                    @foreach (var app in _apps)
-                    {
-                        <MCol Lg="4" Md="6" Sm="12">
-                            <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                <MChipGroup @key="app.EnvironmentClusters" Class="env-cluster-chip-group" ActiveClass="primary--text">
-                                    @foreach (var item in app.EnvironmentClusters)
-                                    {
-                                        <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, item.Id, ConfigObjectType.App, ProjectId))"
-                                            Style="margin:0 12px 1px 0;"
-                                            EnvironmentName="@item.EnvironmentName"
-                                            EnvironmentColor="@item.EnvironmentColor"
-                                            ClusterName="@item.ClusterName" />
-                                    }
-                                </MChipGroup>
-                            </AppCard>
-                        </MCol>
-                    }
-                </MRow>
+                }
+                else
+                {
+                    <SEmptyPlaceholder @key="_projectDetail.Id" Height="100%" Width="100%" Placeholder="@(T("EmptyApp"))"></SEmptyPlaceholder>
+                }
+
+                <MOverlay Class="rounded-4" Value="_showProcess" Absolute Color="#fff" Opacity="1.0">
+                    <MProgressCircular Width="4" Indeterminate Size="48" Color="primary"></MProgressCircular>
+                </MOverlay>
             </div>
         </div>
     </MCol>
