--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 192px);">
+                <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 192px) !important;">
                     <div class="py-4 px-6" style="min-width:300px; display:flex; flex-direction:column; overflow: auto;">
                         <MAvatar>
                             <MImage Height="48" Width="48" Src="@_userTeam.Avatar"></MImage>
