--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -158,14 +158,14 @@
                                     <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
                                         <ChildContent>
                                             <ConfigItems ConfigObject="configObject"
-                                                 CancelEditConfigClick="CancelEditConfigContent"
-                                                 UpdateConfigClick="(config) => { ShowPropertyModal(config, config.ConfigObjectPropertyContents); }"
-                                                 CloneConfigClick="ShowCloneModalAsync"
-                                                 ReleaseConfigClick="ShowReleaseModalAsync"
-                                                 ReleaseHistoryClick="ShowReleaseHistoryAsync"
-                                                 RollbackClick="ShowRollbackModalAsync"
-                                                 RemoveClick="RemoveAsync"
-                                                 RevokeClick="RevokeAsync" />
+                                                         CancelEditConfigClick="CancelEditConfigContent"
+                                                         UpdateConfigClick="(config) => { ShowPropertyModal(config, config.ConfigObjectPropertyContents); }"
+                                                         CloneConfigClick="ShowCloneModalAsync"
+                                                         ReleaseConfigClick="ShowReleaseModalAsync"
+                                                         ReleaseHistoryClick="ShowReleaseHistoryAsync"
+                                                         RollbackClick="ShowRollbackModalAsync"
+                                                         RemoveClick="RemoveAsync"
+                                                         RevokeClick="RevokeAsync" />
                                         </ChildContent>
                                         <ActionsContent>
                                             <MIcon Color="#485585">
@@ -376,7 +376,7 @@
                       OnSubmitAfter="()=>GetConfigObjectsAsync(_selectCluster.Id, ConfigObjectType)">
 </AddConfigObjectModal>
 
-<SSheetDialog EnableDomReload Value="_propertyConfigModal.Visible" ValueChanged="PropertyConfigModalValueChanged" Title="@(_propertyConfigModal.HasValue ? T("Modify config object item") : T("Create config object item"))" Icon="mdi-circle" IconColor="success" OnClosed="PropertyConfigModalClosed">
+<SSheetDialog EnableDomReload Value="_propertyConfigModal.Visible" ValueChanged="PropertyConfigModalValueChanged" Title="@_propertyConfigDialogTitle" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_propertyConfigModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
             <div>
@@ -391,10 +391,10 @@
             </div>
             <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
                 <SButton Small Color="primary" Width="100" OnClick="()=>SubmitPropertyConfigAsync(formContext)">@(_propertyConfigModal.HasValue ? T("Save") : T("Submit"))</SButton>
-                </div>
             </div>
-        </MForm>
-    </SSheetDialog>
+        </div>
+    </MForm>
+</SSheetDialog>
 
 <ReleaseModal @bind-Value="@_showReleaseModal"
               Content="@_configObjectReleaseContent"
