--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MasaCompontentBase
 
-<SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Create config object")" Icon="mdi-circle" IconColor="success" OnClosed="SheetDialogClosed">
+<SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Create config object")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_addConfigObjectModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow: auto;">
