--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/ReleaseModal.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MasaCompontentBase
 
-<SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Release")" Icon="mdi-circle" IconColor="success" OnClosed="SheetDialogClosed">
+<SSheetDialog EnableDomReload Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Release")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_configObjectReleaseModal.Data">
         <div class="d-flex flex-column" style="width:100%; height: 100%; padding: 48px 228px">
             <div class="full-height" style="overflow-y: auto;">
