--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -99,7 +99,7 @@
                         </PrependInnerContent>
                     </MTextField>
                     <MButton Height="40" Width="100" Class="rounded-lg ml-6" Color="primary" OnClick="ShowAddConfigObjectModalAsync">
-                        <MIcon Class="mr-1" Small>mdi-plus</MIcon>@T("Add")
+                        <MIcon Class="mr-1" Small>mdi-plus</MIcon>@T("New")
                     </MButton>
                 </div>
                 <div class="mt-3" style="overflow:auto; @ConfigPanelStyle">
