Fix: All In English, the language is unified

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -40,7 +40,7 @@
         if (!ConfigObject.FromRelation)
         {
             <MButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
-                <SIcon Tooltip="@(T("Add config item"))" Color="#323D6F">mdi-plus-circle</SIcon>
+                <SIcon Tooltip="@(T("New config item"))" Color="#323D6F">mdi-plus-circle</SIcon>
             </MButton>
         }
     }
